# AgentM-X

./: .env.example  .gitignore  README.md  TODO.md  config.yaml  persona.yaml  pyproject.toml
agentmx/: cli.py
agentmx/autonomy/: evaluator.py  executor.py  planner.py  tasks.py
agentmx/core/: config.py  runner.py
agentmx/exec/: sandbox.py
agentmx/memory/: store.py
agentmx/safety/: audit.py  hotkey.py  policy.py  runner.py  secrets.py
agentmx/skills/: __init__.py  factory.py  registry.py
agentmx/skills/browser/: upload_receipt.py
agentmx/skills/gui/: notepad.py
agentmx/ui/: api.py
scripts/: bootstrap.ps1  run_local.ps1  run_scheduler_brief.py
scripts/linux/: agentmx-scheduler.service  install_agentmx_service.sh  install_service.sh  uninstall_agentmx_service.sh
scripts/windows/: install_scheduler_nssm.ps1
tests/: test_api_key.py  test_notepad_skill.py  test_run_api.py  test_runs_endpoints.py  test_stop_file.py
tests/api/: test_metrics_endpoint.py
tests/autonomy/: test_planner_executor_evaluator.py  test_tasks_queue.py
